# sqlserver-pg-cdc

./: .codecov.yml  .env.example  .gitignore  .mutmut_config.py  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  coverage.json  pyproject.toml  pyproject.toml.mutmut  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml
.specify/memory/: constitution.md
configs/grafana/dashboards/: cdc-pipeline-overview.json  cdc-reconciliation-details.json
configs/grafana/provisioning/: dashboards.yml
configs/loki/: loki-config.yml
configs/promtail/: promtail-config.yml
docker/: .env.example  docker-compose.logging.yml  docker-compose.test.yml  docker-compose.yml  wait-for-services.sh
docker/configs/debezium/: sqlserver-source.json
docker/configs/jaeger/: jaeger-config.yml
docker/configs/kafka-connect/: postgresql-sink.json
docker/configs/prometheus/: alert-rules.yml  postgres-exporter-queries.yaml  prometheus.yml
docker/configs/vault/: config.hcl
docs/: CONNECTOR_CONFIGURATION.md  COVERAGE_PLAN.md  PERFORMANCE_TEST_FIX_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_VALIDATION_REPORT.md  PHASE8_COMPLETION.md  Phase1_Implementation_Summary.md  Phase2_Implementation_Summary.md  Phase3_Implementation_Summary.md  Phase4_Implementation_Summary.md  Phase5_Implementation_Summary.md  RECONCILIATION_FEATURE_EVALUATION.md  SWOT.md  VAULT-INTEGRATION-SUMMARY.md  VAULT-MIGRATION-COMPLETE.md  cdc-pipeline-setup-learnings-II.md  cdc-pipeline-setup-learnings.md  configs-vault.md  debezium-deleted-field-analysis.md  development-architecture.md  development-notes.md  guides-testing.md  improvements.md  module-structure.md  monitoring.md  mutation-testing-optimization.md  operations.md  opportunities_Implementation_plan.md  performance-test-instability-analysis.md  quick-start-vault.md  schema-evolution.md  structure_improve_plan.md  test-environment-reset.md  test_cleanup_summary.md  troubleshooting-part01.md  useless_tests_plan.md  vault-integration.md  weakness_threats_mitigation_plan.md
docs/runbooks/: disaster-recovery.md  operations.md  quickstart.md  schema-evolutions.md  troubleshooting.md
docs/testing/: Phase4_Quick_Start.md  Phase4_Testing_Infrastructure_Guide.md
kafka-connect-transforms/: pom.xml
scripts/bash/: backup-databases.sh  collect-diagnostics.sh  create-topics.sh  deploy-connector.sh  deploy-with-vault.sh  generate-connector-configs-old.sh  generate-connector-configs.sh  init-postgres.sh  init-sqlserver.sh  monitor.sh  pause-resume.sh  reset-test-environment.sh  restore-databases.sh  run-integration-tests.sh  scale-connector.sh  setup-pre-commit.sh  vault-helpers.sh  vault-init.sh  verify-topics.sh
scripts/python/: analyze_query_performance.py  diagnose_performance_test.py  reconcile.py  reset_test_environment.py  setup.py
scripts/sql/: create_reconciliation_indexes.sql
specs/001-sqlserver-pg-cdc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sqlserver-pg-cdc/checklists/: requirements.md
specs/001-sqlserver-pg-cdc/contracts/: debezium-sqlserver-source.json  jdbc-postgresql-sink.json  kafka-topics.yaml
src/reconciliation/: __init__.py  cli.py  compare.py  incremental.py  parallel.py  report.py  row_level.py  scheduler.py
src/reconciliation/cli/: __init__.py  commands.py  credentials.py  parser.py
src/reconciliation/compare/: __init__.py  checksum.py  counts.py  quoting.py
src/reconciliation/incremental/: __init__.py  checksum.py  (+1 more)
src/transformation/: __init__.py  transform.py
src/utils/: __init__.py  database_types.py  db_pool.py  logging_config.py  metrics.py  query_optimizer.py  retry.py  sql_safety.py  tracing.py  tracing_integration.py  vault_client.py
tests/: README.md  __init__.py  conftest.py
tests/chaos/: test_chaos_recovery.py
tests/contract/: __init__.py  test_debezium_schema.py  test_jdbc_sink_schema.py  test_kafka_connect_api_pact.py
tests/e2e/: README.md  __init__.py  conftest.py  test_cli_commands.py  test_docker_environment.py  test_reconciliation.py
tests/integration/: __init__.py  test_db_pool_integration.py  test_error_recovery.py  test_monitoring.py  test_performance.py  test_replication_flow.py  test_replication_independent.py  test_scheduler_jobs.py  test_schema_evolution.py
tests/latency/: 20251224_latency.md  README.md  measure_cdc_latency.py
tests/load/: __init__.py  database_load_test.py  locustfile.py  reconciliation_load_test.py
tests/performance/: conftest.py  test_performance.py  test_replication_flow.py
tests/property/: __init__.py  test_data_integrity_properties.py  test_reconciliation_properties.py
tests/unit/: __init__.py  test_cli.py  test_db_pool.py  test_incremental.py  test_init_files.py  test_logging_config.py  test_metrics.py  test_parallel.py  test_query_optimizer.py  test_reconcile.py  test_retry.py  test_row_level.py  test_scheduler.py  test_sql_injection.py  test_transform.py  test_vault_client.py
(+46 files in other folders)
